tests/valid/test_array_22.wyal
assert:
  forall (int[] xs):
    (xs == [0;0]) ==> (|xs| == 0)
